<resources>
    <string name="app_name">txtLocker</string>
    <string name="main_note_storage">Main directory</string>
    <string name="enter_your_pin">Enter your PIN</string>
    <string name="enter_new_pin">Enter new PIN</string>
    <string name="pin">PIN</string>
    <string name="submit">Submit</string>
    <string name="reset_app">Reset application</string>
    <string name="new_note">New note</string>
    <string name="exit_app">Exit</string>
    <string name="title">Title</string>
    <string name="note_text_hint">Put some text here</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="new_directory">New directory</string>
    <string name="delete_directory">Delete directory</string>
    <string name="directories">Directories</string>
    <string name="directory_name">Directory name</string>
    <string name="menu">Menu</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="exporting">Export directory</string>
    <string name="importing">Import directory</string>
    <string name="choose_directory">Choose directory</string>
    <string name="enter_encrypting_pin">Enter encrypting PIN</string>
    <string name="enter_decrypting_pin">Enter decrypting PIN</string>
</resources>