<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:textSize="32sp" />

        <Button
            android:id="@+id/buttonExitApp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/exit_app"
            android:textColor="@color/burgundy_red"
            app:rippleColor="@color/burgundy_red" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:text="@string/directories"
            android:textSize="18sp"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/buttonAddDirectory"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/baseline_add_directory"
            android:src="@drawable/baseline_add_directory"
            app:rippleColor="@color/luminous_green"/>

        <ImageButton
            android:id="@+id/buttonDeleteDirectory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/baseline_delete_directory"
            android:src="@drawable/baseline_delete_directory"
            app:rippleColor="@color/burgundy_red" />

        <ImageButton
            android:id="@+id/buttonExport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/baseline_export_import_directory"
            android:src="@drawable/baseline_export_import_directory"
            app:rippleColor="@color/burgundy_red" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@color/gray" />


</LinearLayout>